--- a/api-express-mvc/package.json
+++ b/api-express-mvc/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
